openrune: reset to upstream client bare